[gd_scene load_steps=10 format=3 uid="uid://cxyc70okerjdf"]

[ext_resource type="Script" uid="uid://un6earl4dqlv" path="res://Scripts/send_name.gd" id="1_jsano"]
[ext_resource type="Shader" uid="uid://bg0st5xntgvce" path="res://Asetts/pausemenu.gdshader" id="2_6ay1b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p6lae"]
shader = ExtResource("2_6ay1b")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p67qx"]
bg_color = Color(0.289588, 0.405746, 0.421397, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(3.72304e-05, 3.72304e-05, 3.72303e-05, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wk3m3"]
border_width_left = 3
border_width_top = 3
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qpetm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsano"]
bg_color = Color(0.783523, 0.783523, 0.783523, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ay1b"]
bg_color = Color(0.454524, 0.454524, 0.454524, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6lae"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jsano")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_p6lae")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -138.5
offset_right = 285.5
offset_bottom = 138.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p67qx")

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 571.0
offset_bottom = 75.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wk3m3")

[node name="congratulations_label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 182.5
offset_top = 20.5
offset_right = 466.5
offset_bottom = 51.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "Your Score is:"

[node name="enter_name_label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.0
offset_top = 91.0
offset_right = 93.0
offset_bottom = 134.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Enter Your Name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nameInput" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 158.0
offset_top = 146.0
offset_right = 425.0
offset_bottom = 177.0
theme_override_constants/caret_width = 10
alignment = 1

[node name="enterButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 235.5
offset_top = 199.5
offset_right = 341.5
offset_bottom = 246.5
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
theme_override_styles/focus = SubResource("StyleBoxEmpty_qpetm")
theme_override_styles/hover = SubResource("StyleBoxFlat_jsano")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6ay1b")
theme_override_styles/normal = SubResource("StyleBoxFlat_p6lae")
text = "Enter"
